@@ -1,3 +1,11 @@
+2008-11-11       Gaius Mulley <gaius@gnu.org>
+
+	* gm2/gm2spec.c:  modified add_default_directories
+	  to use a default_library_path.  lang_specific_driver
+	  sets the default_library_path to getenv LIBRARY_PATH
+	  or failing that to the LIBSUBDIR as determined by
+	  configure.
+
 2008-11-10       Gaius Mulley <gaius@gnu.org>
 
 	* gm2/gm2-libs-iso/README.texi:  added RndFile
